2005-03-22  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTransformTests.cs : added test 1)that examines pattern sanity and
	  2)that examines if empty element RTF is evaluated as true for bool.

2005-02-28  Atsushi Enomoto  <atsushi@ximian.com>

	* MsxslScriptTests.cs,
	  XslTransformTests.cs : set NotWorking for msxsl:script tests (they
	  premise runnable compilers existence which actually might not exist.)

2005-01-13  Atsushi Enomoto  <atsushi@ximian.com>

	* MsxslScriptTests.cs : actually it was not testing stylesheet.
	* XslTransformTests.cs : marked MSXslNodeSetRejectsNodeSet() as
	  NotDotNet.

2004-06-06  Atsushi Enomoto <atsushi@ximian.com>

	* MsxslScriptTests.cs : Namespace are required (found on fixing
	  XmlTextReader's namespace bugfix).

2004-05-20  Atsushi Enomoto <atsushi@ximian.com>

	* XslTransformTests.cs : Added tests for msxsl:node-set().

2004-03-31  Atsushi Enomoto <atsushi@ximian.com>

	* Added MsxslScriptTests.cs.

2004-03-24  Atsushi Enomoto <atsushi@ximian.com>

	* XslTransformTests.cs : Added InvalidStylesheet2().

2004-03-13  Atsushi Enomoto <atsushi@ximian.com>

	* XslTransformTests.cs : added some tests for invalid stylesheets.

2004-01-03  Atsushi Enomoto <atsushi@ximian.com>

	* XslTransformTests.cs : fixed incorrect file path, and output childnode
	  count.

2003-05-13  Martin Willemoes Hansen <mwh@sysrq.dk>

	* XslTransformTests.cs: Inherits from Assertion and Assertion.
	  prefix removed.

2003-04-12  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* added this file as a new entry.
	  See ../ChangeLog to find former ChangeLog entries.