@@ -1,3 +1,8 @@
+2005-03-23  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* XslTransformTests.cs : added test that examines if XSLT rejects
+	  xsl:import incorrectly placed after other contents.
+
 2005-03-22  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XslTransformTests.cs : added test 1)that examines pattern sanity and
